# prompting-tutorials

./: .gitignore  LICENSE  Makefile  README.md  jupyter_notebook_config.py
mcp-hands-on/: README.md
mcp-hands-on/commerce-analytics/: Makefile  README.md  pyproject.toml
mcp-hands-on/commerce-analytics/src/: client.py  main.py
mcp-hands-on/commerce-analytics/src/prompts/: __init__.py  sql_generator.py
mcp-hands-on/commerce-analytics/src/resources/: __init__.py  commerce_schema.py  schema.py
mcp-hands-on/commerce-analytics/src/tools/: __init__.py  sql_tools.py
mcp-hands-on/data-analytics/: Makefile  pyproject.toml
mcp-hands-on/data-analytics/src/: __init__.py
mcp-hands-on/data-analytics/src/prompts/: __init__.py
mcp-hands-on/data-analytics/src/resources/: __init__.py
mcp-hands-on/mcp-boilerplate/: Makefile  README.md  pyproject.toml
mcp-hands-on/mcp-boilerplate/src/: main.py
mcp-hands-on/weather/: Makefile  README.md  main.py  setup.py  utils.py
notebooks/: 01_zero_shot.ipynb  02_few_shot.ipynb  03_chain_of_thought.ipynb  04_self_consistency.ipynb  05_knowledge.ipynb  06_prompt_chaining.ipynb  07_rag.ipynb  08_react.ipynb  09_tree_of_thoughts.ipynb
prompting-guide/: .env.example  README.md
prompting-guide/notebooks/: 06_prompt_chaining.ipynb  08_react.ipynb
prompting-guide/scripts/: setup.sh
prompting-guide/utils/: react.py  tot.py
promptingguide/: Makefile  requirements.txt
promptingguide/notebooks/: 07_rag.ipynb
promptingguide/utils/: tool_tracker.py
scripts/: setup.bat
utils/: conversation_manager.py  helpers.py  log.py
(+6 files in other folders)
