[project]
name = "commerce-analytics"
version = "0.1.0"
description = "커머스 데이터 분석 도구를 제공하는 MCP 서버"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastmcp>=1.0.0",
    "pandas>=1.5.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0"
]

[tool.setuptools]
packages = ["src"] 